# faemiyah-demoscene_2015-08_4k-intro_ghosts_of_mars

./: .gitignore  CMakeLists.txt  README.md  compile.sh  refresh.sh  release.sh
rel/: ghosts_of_mars_linux-amd64
src/: dnload.h  glsl_shader.cpp  intro.cpp  quad.frag.glsl  quad.frag.glsl.hpp
